Fixed some layout issues

--- a/src/app/ui/components/sidenav/sidenav.component.scss
+++ b/src/app/ui/components/sidenav/sidenav.component.scss
@@ -1,8 +1,8 @@
 .sidenav {
   background: rgb(22, 92, 125);
-  transition: all 0.5s ease;
+  transition: all 0.1s ease;
   position: fixed;
-  z-index: 999;
+  z-index: 1;
   top: 0;
   width: 85px;
   height: 100vh;
@@ -47,7 +47,7 @@
 
       mat-icon {
         color: white;
-        font-size: 25px !important;
+        font-size: 50px !important;
       }
     }
   }
@@ -105,15 +105,15 @@
     padding: 0 30px;
 
     .sidenav-link-icon {
-      font-size: 22px;
-      width: 2rem;
-      min-width: 2rem;
+      width: 25px;
+      min-width: 25px;
       margin: 0 0.5rem;
       align-items: center;
+    }
 
-      .material-symbols-outlined {
-        font-variation-settings: "FILL" 0, "wght" 100, "GRAD" 0, "opsz" 40;
-      }
+    .material-symbols-sharp {
+      font-size: 25px !important;
+      font-variation-settings: "FILL" 0, "wght" 100, "GRAD" 0, "opsz" 40;
     }
 
     .sidenav-link-text {
@@ -125,7 +125,7 @@
 .sidenav-nav-item:hover {
   background: rgb(1, 63, 92);
   color: white;
-  width: 85px;
+  width: 100%;
   height: 60px;
 }
 
