--- a/src/app/ui/components/stepper/stepper.component.scss
+++ b/src/app/ui/components/stepper/stepper.component.scss
@@ -1,8 +1,8 @@
 .mat-stepper-horizontal {
   font-family: "Open Sans", sans-serif;
   margin-top: 8px;
-  height: calc(100% - 78px);
   background-color: #e7eef1;
+  min-height: 79vh;
 }
 
 ::ng-deep .mat-horizontal-stepper-header-container {
@@ -18,13 +18,24 @@
     color: white;
   }
 
+  .mat-step-header .mat-step-icon {
+    background-color: #c6ced1;
+    width: 18px;
+    height: 18px;
+    color: white;
+  }
+
   .mat-step-header .mat-step-icon-state-done {
     background-color: #3f51b5;
+    width: 18px;
+    height: 18px;
     color: white;
   }
 
   .mat-step-header .mat-step-icon-selected {
     border: 1px #3f51b5 solid;
+    width: 18px;
+    height: 18px;
     background-color: transparent;
     color: white;
   }
@@ -36,6 +47,46 @@
 
 .mat-form-field {
   margin-top: 12px;
+}
+
+::ng-deep .mat-drawer-backdrop.mat-drawer-shown {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+  padding: 1em 0 1em 0;
+  min-width: 270px;
+}
+
+form {
+  margin-bottom: 15px;
+  .search {
+    display: flex;
+    align-items: center;
+    input {
+      font-family: "Open Sans", sans-serif;
+      width: 260px;
+      height: 32px;
+      border: 1px #889499 solid;
+      background-color: white;
+      padding-left: 10px;
+      &.error {
+        border {
+          border: 1px red solid;
+        }
+      }
+    }
+  }
+  button {
+    margin-left: 15px;
+    height: 34px;
+    border-radius: 0;
+    background-color: rgb(22, 92, 125);
+  }
+  > .error {
+    font-size: 10px;
+    color: red;
+  }
 }
 
 .search-container {
@@ -52,16 +103,104 @@
   flex-wrap: wrap;
   margin-right: -1em;
   margin-left: -1em;
-  .example-card {
-    max-width: 400px;
+
+  .stepper-card {
+    max-width: 238px !important;
     flex: 0 0 25%;
     max-width: 25%;
-    margin: 1em;
+    .mat-card-header {
+      .mat-card-header-text {
+        margin: 0 0 !important;
+      }
+    }
+    mat-card-content {
+      mat-label {
+        font-family: "Open Sans", sans-serif;
+        font-size: 11px;
+        color: #787878;
+      }
+    }
   }
   .indentification-card {
-    max-width: 270px !important;
+    max-width: 238px !important;
+
     flex: 0 0 25%;
     max-width: 25%;
     margin: 0 15px;
   }
+}
+
+mat-slide-toggle {
+  display: block;
+  margin: 20px 0;
+}
+
+::ng-deep .mat-slide-toggle-thumb-container {
+  position: absolute;
+  z-index: 1;
+  width: 40px;
+  height: 40px;
+  top: -1px !important;
+  left: 0;
+  transform: translate3d(0, 0, 0);
+  transition: all 80ms linear;
+  transition-property: transform;
+}
+
+::ng-deep .mat-slide-toggle-bar {
+  width: 62px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 50px !important;
+}
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  width: 62px;
+  height: 36px;
+  background-color: #ffa300;
+}
+
+::ng-deep .mat-slide-toggle-thumb {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: block;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+  width: 36px;
+  height: 36px;
+  border: 1px #c6ced1 solid;
+  background-color: white;
+}
+
+mat-radio-group {
+  display: block;
+  margin-bottom: 21px;
+  mat-radio-button {
+    margin-right: 50px;
+  }
+}
+
+::ng-deep .mat-radio-checked {
+  .mat-radio-outer-circle {
+    border-color: #ffa300 !important;
+  }
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle {
+  background-color: #ffa300 !important;
+}
+
+h2 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 22px;
+  margin: 0 0 2px;
+}
+
+h4 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  color: #787878;
+  font-weight: 700 !important;
+  margin-top: 20px;
 }
