--- a/src/app/ui/pages/home/home.component.scss
+++ b/src/app/ui/pages/home/home.component.scss
@@ -1,4 +1,5 @@
-.example-container {
+.home-container {
+  display: block;
   width: 100%;
   position: absolute;
   top: 0;
@@ -6,11 +7,7 @@
   left: 0;
 }
 
-.example-sidenav {
-  width: 500px;
-}
-
-.example-menu-sidenav {
+.home-menu-sidenav {
   width: 100px;
 }
 
@@ -23,20 +20,47 @@ mat-drawer-content {
 
 mat-drawer {
   padding: 100px 40px;
-  .actions-container {
-    position: absolute;
-    bottom: 30px;
-  }
-  mat-checkbox {
-    font-size: "Open Sans";
-    .mat-checkbox {
-      background: #ffa300;
+  font-family: "Open Sans", sans-serif;
+  &.home-sidenav {
+    width: 500px;
+    display: flex;
+    align-items: center;
+
+    font-size: 14px;
+    h2 {
+      font-family: "Open Sans", sans-serif;
+      font-size: 22px;
     }
   }
-  ul {
+  mat-checkbox {
+    font-family: "Open Sans", sans-serif !important;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  ul.list {
+    display: list-item;
+    list-style: disc !important;
     li {
-      list-style: disc !important;
+      font-family: "Open Sans", sans-serif !important;
       font-size: 11px;
+      margin-top: 10px;
+    }
+  }
+  .drawer-action {
+    display: flex;
+    align-self: center;
+    position: absolute;
+    bottom: 30px;
+    button {
+      height: 48px;
+      width: 232px;
+      border-radius: 0;
+      margin: 0 97px;
+      &.close-drawer {
+        font-family: "Open Sans", sans-serif;
+        border: 1px rgb(22, 92, 125) solid;
+        color: rgb(22, 92, 125);
+      }
     }
   }
 }
@@ -44,17 +68,24 @@ mat-drawer {
 .actions-container {
   min-height: 78px;
   padding: 0 25px;
-  position: absolute;
-  bottom: 0;
+
+  display: block;
   button {
-    .mat-stroked-button.mat-primary {
-      color: #3f51b5;
+    border-radius: 0;
+    &.start-admission {
+      background-color: rgb(22, 92, 125);
+      color: white;
     }
-    .mat-flat-button.mat-primary {
-      background-color: #165c7d;
+    &.hints {
+      border: 1px rgb(22, 92, 125) solid;
+      color: rgb(22, 92, 125);
     }
     width: 274px;
     height: 48px;
     margin: 15px 15px 15px 0;
   }
+}
+
+::ng-deep .mat-checkbox-checked.mat-primary .mat-checkbox-background {
+  background-color: #ffa300;
 }
