--- a/src/app/ui/pages/main/main.component.scss
+++ b/src/app/ui/pages/main/main.component.scss
@@ -5,7 +5,7 @@
   z-index: 0;
   position: relative;
   top: 0;
-  transition: all 0.5s ease;
+  transition: all 0.1s ease;
   background: #f4f7fa;
 }
 
